kubernetes/ingress-nginx/gofiles-ingressing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gofiles-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gofiles-talos.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "gofiles-talos.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gofiles-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gofilessrv-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gofiles.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "gofiles.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gofiles-svc
                port:
                  number: 80
