kubernetes/ingress-nginx/goinfra-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-infra-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - infra.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "infra.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: go-infra-svc
                port:
                  number: 8993
