kubernetes/ingress-nginx/jellyfin-extsvc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-ext-service
  namespace: default
spec:
  externalName: trahjellyfin1.trahan.dev
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: 8096
  sessionAffinity: None
  type: ExternalName
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/configuration-snippet:
      "proxy_set_header Host $host;\nproxy_set_header
      X-Real-IP $remote_addr;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      \nproxy_set_header X-Forwarded-Proto $scheme;\nproxy_set_header X-Forwarded-Protocol $scheme;\nproxy_http_version 1.1;\nproxy_set_header Upgrade $http_upgrade;\nproxy_set_header
      Connection $connection_upgrade;\nproxy_set_header X-Forwarded-Host $http_host;\nproxy_buffering off;"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |-
      client_max_body_size 100G;
      server_tokens off;
      proxy_hide_header X-Powered-By;
  generation: 2
  managedFields:
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jellyfin.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "jellyfin.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jellyfin-ext-service
                port:
                  number: 8096
          - pathType: Prefix
            path: "/socket"
            backend:
              service:
                name: jellyfin-ext-service
                port:
                  number: 8096
