kubernetes/ingress-nginx/jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-ext-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: 8096
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin-ext-service
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.0.96
    ports:
      - port: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: jellyfin.trahan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-ext-service
                port:
                  number: 8096
  tls:
    - hosts:
        - jellyfin.trahan.dev
      secretName: trahan-dev-cert
