kubernetes/ingress-nginx/longhorn-and-rancher.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - longhorn.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "longhorn.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rancher.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "rancher.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rancher
                port:
                  number: 80
