kubernetes/ingress-nginx/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio1-service
  namespace: default
spec:
  externalName: minio1.trahan.dev
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: http2
      port: 36729
      protocol: TCP
      targetPort: 36729
  sessionAffinity: None
  type: ExternalName
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress   
metadata:
  name: minio1-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/configuration-snippet:
      "proxy_set_header Host $http_host;\nproxy_set_header
      X-Real-IP $remote_addr;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      \     \nproxy_http_version 1.1;\nproxy_set_header Upgrade $http_upgrade;\nproxy_set_header
      Connection $connection_upgrade;      "
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |-
      client_max_body_size 100G;
      server_tokens off;
      proxy_hide_header X-Powered-By;
  generation: 2
  managedFields:
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "minio.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio1-service
                port:
                  number: 9000
