kubernetes/ingress-nginx/proxmox-external-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox2-service
  namespace: default
spec:
  externalName: proxmox2.trahan.dev
  ports:
    - name: https
      port: 8006
      protocol: TCP
      targetPort: 8006
  sessionAffinity: None
  type: ExternalName
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox3-service
  namespace: default
spec:
  externalName: proxmox3.trahan.dev
  ports:
    - name: https
      port: 8006
      protocol: TCP
      targetPort: 8006
  sessionAffinity: None
  type: ExternalName
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox4-service
  namespace: default
spec:
  externalName: proxmox4.trahan.dev
  ports:
    - name: https
      port: 8006
      protocol: TCP
      targetPort: 8006
  sessionAffinity: None
  type: ExternalName
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox2-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/configuration-snippet:
      "proxy_set_header Host $http_host;\nproxy_set_header
      X-Real-IP $remote_addr;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      \     \nproxy_http_version 1.1;\nproxy_set_header Upgrade $http_upgrade;\nproxy_set_header
      Connection $connection_upgrade;      "
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |-
      client_max_body_size 100G;
      server_tokens off;
      proxy_hide_header X-Powered-By;
  generation: 2
  managedFields:
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vm2.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "vm2.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: proxmox2-service
                port:
                  number: 8006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox3-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/configuration-snippet:
      "proxy_set_header Host $http_host;\nproxy_set_header
      X-Real-IP $remote_addr;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      \     \nproxy_http_version 1.1;\nproxy_set_header Upgrade $http_upgrade;\nproxy_set_header
      Connection $connection_upgrade;      "
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |-
      client_max_body_size 100G;
      server_tokens off;
      proxy_hide_header X-Powered-By;
  generation: 2
  managedFields:
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vm3.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "vm3.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: proxmox3-service
                port:
                  number: 8006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox4-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/configuration-snippet:
      "proxy_set_header Host $http_host;\nproxy_set_header
      X-Real-IP $remote_addr;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      \     \nproxy_http_version 1.1;\nproxy_set_header Upgrade $http_upgrade;\nproxy_set_header
      Connection $connection_upgrade;      "
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |-
      client_max_body_size 100G;
      server_tokens off;
      proxy_hide_header X-Powered-By;
  generation: 2
  managedFields:
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vm4.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "vm4.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: proxmox4-service
                port:
                  number: 8006
