kubernetes/ingress-nginx/talos-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana-talos.trahan.dev
        - grafana.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "grafana-talos.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
    - host: "grafana.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus-talos.trahan.dev
        - prometheus.trahan.dev
      secretName: trahan-dev-cert
  rules:
    - host: "prometheus-talos.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
    - host: "prometheus.trahan.dev"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: proxmox-metrics-ingress
#  namespace: monitoring
#spec:
#  ingressClassName: nginx
#  tls:
#    - hosts:
#        - proxmox-metrics.trahan.dev
#      secretName: trahan-dev-cert
#  rules:
#    - host: "proxmox-metrics.trahan.dev"
#      http:
#        paths:
#          - pathType: Prefix
#            path: "/"
#            backend:
#              service:
#                name: proxmox-exporter
#                port:
#                  number: 8080
